--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,45 @@
-version: '2'
+version: '3'
 
 services:
     db:
         image: mysql
         volumes:
-            - "./.data/db:/var/lib/mysql"
+            - "./data/db:/var/lib/mysql"
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        deploy:
+          resources:
+            limits:
+              cpus: '0.1'
+              memory: 256M
+
     php:
         build: php7-fpm
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
+        deploy:
+          resources:
+            limits:
+              cpus: '0.1'
+              memory: 256M
+
     nginx:
         build: nginx
         ports:
             - 80:80
-        volumes_from:
-            - php
         volumes:
+            - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/nginx/:/var/log/nginx
+        deploy:
+          resources:
+            limits:
+              cpus: '0.1'
+              memory: 256M
+
     elk:
         image: willdurand/elk
         ports:
@@ -30,6 +47,10 @@ services:
         volumes:
             - ./elk/logstash:/etc/logstash
             - ./elk/logstash/patterns:/opt/logstash/patterns
-        volumes_from:
-            - php
-            - nginx
+            - ${SYMFONY_APP_PATH}:/var/www/symfony
+            - ./logs/nginx/:/var/log/nginx
+        deploy:
+          resources:
+            limits:
+              cpus: '0.1'
+              memory: 256M
