--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,7 @@ FROM debian:jessie
 
 MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
 
-RUN apt-get update && apt-get install -y \
-    nginx
+RUN apt-get update && apt-get install -y nginx
 
 ADD nginx.conf /etc/nginx/
 ADD symfony.conf /etc/nginx/sites-available/
@@ -14,6 +13,8 @@ RUN rm /etc/nginx/sites-enabled/default
 RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
 
 RUN usermod -u 1000 www-data
+
+RUN echo 'alias ll="ls -la"' >> ~/.bashrc
 
 CMD ["nginx"]
 
